--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Mon blog-notes à moi que j'ai
 description: Le meilleur du pire de mes flux RSS (et de Twitter)
 meta_description: "Your New Jekyll Site, Blogging about stuffs"
 logo: images/me.jpg
-baseurl: ""
+baseurl: "/"
 domain: blog.jbfav.re
 
 timezone: Europe/Paris
@@ -14,7 +14,7 @@ paginate: 15
 
 
 # Details for the RSS feed generator
-url:            'blog url'
+url:            'http://blog.jbfav.re/'
 author:         'Jean-Baptiste Favre'
 
 github: jbfavre
