--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,4 @@ owner:
 
 permalink: /:year/:month/:day/:title
 
-exclude: ["CNAME", "Rakefile", "MIT-LICENSE", "README.md", "TODO.taskpaper", "Gemfile", ".git" ".gitignore"]
+exclude: ["CNAME", "Rakefile", "MIT-LICENSE", "README.md", "TODO.taskpaper", "Gemfile", ".git", ".gitignore"]
