--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ category_feed_dir: category
 
 author:
   name: Jean Baptiste Favre
-  bio: Sysadmin, tendance hacker. Je tripatouille tout ce que je touche. Actuellement Architecte système chez BlaBlaCar
+  bio: |
+    Sysadmin, tendance hacker. Je tripatouille tout ce que je touche.
+    Architecte système chez BlaBlaCar le jour, numérisateur de livres numériques la nuit.
   email: webmaster@jbfavre.org
 
 github: jbfavre
