--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,7 @@ category_feed_dir: category
 author:
   name: Jean Baptiste Favre
   bio: |
-    Sysadmin, tendance hacker.
-    Ops manager chez BlaBlaCar le jour, moine copiste de livres numériques la nuit.
+    Sysadmin, tendance hacker.<br/>Ops lead chez BlaBlaCar le jour, moine copiste numériques la nuit.
   email: webmaster@jbfavre.org
 
 github: jbfavre
